--- a/client/style.css
+++ b/client/style.css
@@ -2,7 +2,7 @@
     background-color: #EEE8B1;
     padding: 5px;
     text-align: center;
-    margin-bottom: 5px;
+    margin-bottom: 2px;
     font-weight: bold;
 }
 
@@ -22,6 +22,8 @@
 .life-outer {
     height: 100%;
     padding: 2px;
+    padding-right: 1px;
+    padding-left: 1px;
 }
 
 .life-container {
