--- a/client/style.css
+++ b/client/style.css
@@ -52,3 +52,14 @@
 .sounds > button {
     margin-top:2px;
 }
+
+.chooseButton {
+    width: 100%;
+    height: 500px;
+}
+
+.chooseButton > button {
+    width: 100%;
+    height: 100%;
+    font-size: 200px;
+}
